--- a/httpd-openidc/Dockerfile
+++ b/httpd-openidc/Dockerfile
@@ -12,17 +12,14 @@ ENV CJOSE_DEB_SHA1 d6ca5569bed04a1450e054b3280702f1edfe2ae7
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN depsRuntime=" \
-    libcurl4 ca-certificates \
+    libcurl4 ca-certificates curl \
     libpcre3 \
     libjansson4 \
     libhiredis0.14 \
   " \
-  && depsBuild=" \
-    curl \
-  " \
   set -x \
   && apt-get update \
-  && apt-get install -y --no-install-recommends $depsRuntime $depsBuild \
+  && apt-get install -y --no-install-recommends $depsRuntime \
   && rm -r /var/lib/apt/lists/* \
   && curl -sLSf "$CJOSE_DEB_URL" -o libcjose.deb \
   && echo "$CJOSE_DEB_SHA1 libcjose.deb" | sha1sum -c - \
@@ -34,7 +31,6 @@ RUN depsRuntime=" \
   && dpkg --force-all -i mod_auth_openidc-$OPENIDC_VERSION.deb \
   && rm mod_auth_openidc-$OPENIDC_VERSION.deb \
   && ln -s /usr/lib/apache2/modules/mod_auth_openidc.so /usr/local/apache2/modules/mod_auth_openidc.so \
-  && apt-get purge -y --auto-remove $depsBuild \
   && rm -rf /var/log/dpkg.log /var/log/alternatives.log /var/log/apt
 
 RUN sed -i 's|LoadModule rewrite_module modules/mod_rewrite.so|LoadModule rewrite_module modules/mod_rewrite.so\nLoadModule auth_openidc_module modules/mod_auth_openidc.so|' conf/httpd.conf
